--- a/app/assets/stylesheets/margins.scss
+++ b/app/assets/stylesheets/margins.scss
@@ -2,6 +2,11 @@
   margin: 1rem;
 }
 
+.m-1-bottom {
+  margin-bottom: 1rem;
+}
+
 .m-5-bottom {
   margin-bottom: 5rem;
 }
+
