--- a/app/assets/stylesheets/utility.scss
+++ b/app/assets/stylesheets/utility.scss
@@ -16,3 +16,7 @@
     display: inline;
   }
 }
+
+.no-wrap {
+  white-space: nowrap;
+}
